--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-p, h1, h2, h3, h4, h5, li, a {
+p, h1, h2, h3, h4, h5, li, a, address {
   margin: 0;
   padding: 0;
 
@@ -121,4 +121,23 @@ div.images div{
   font-size: 14px;
 
   line-height: 20px;
+}
+
+div#footer{
+  position: fixed;
+
+  bottom: 5px;
+  left: 20px;
+  width: 220px;
+
+  padding: 20px 0 0 0;
+}
+address{
+    margin: 1em 0;
+    padding: 1em 0.7em;
+    background-color: #f8f8f8;
+    font-style: italic;
+    font-size: xx-small;
+    color: #aaaaaa;
+    text-align:right;
 }
